# LArch8

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  compile_commands.json
.github/workflows/: cmake-single-platform.yml
docs/: architecture.md  assembler.md  assembly.md  docs.md  instruction_set.md
include/: a_addr_translation.h  a_assembler.h  a_compilation.h  a_cpu_struct.h  a_instruction_set.h  a_parser.h  a_parsing.h  a_types.h  addr_translation.h  assembler.h  assembler_words.h  compiler.h  file_processer.h  i_cpu_struct.h  i_instruction_set.h  i_parser.h  i_runtime.h  i_types.h  instruction_set.h  parser.h  print.h  structs.h  types.h
src/: const.c  file_processer.c  instruction_set.c  parser.c  parsing.c  print.c  words.c
src/assembler/: addr_translation.c  assembler_words.c  checks.c  compiler.c  constants.c  file_processer.c  mach_code_gen.c  main.c  parsing.c  precompiler.c  string_tools.c  tokenization_and_parser.c  translator.c  words.c
src/interpreter/: instruction_set.c  main.c  parser.c  parsing.c  runtime.c
tests/: test.asm
tests/testdata/: test.asm
tests/tests/: test_assembler_compiles.c
